1. Add module dotenv, passport, passport-jwt, passport-local, jsonwebtoken 2. Add user login function 3. Add date to User model 4. Update swagger file
