# router/users.js
@@ -1,7 +1,9 @@
 const express = require("express");
+const jwt = require("jsonwebtoken");
 const router = express.Router();
 const userModel = require("../models").users;
 const registerValidation = require("../utils/validator").registerValidation;
+const loginValidation = require("../utils/validator").loginValidation;
 
 
 // Get all users
@@ -20,10 +22,10 @@ router.get("/", async (req, res) => {
 
 // Get a user by id
 
-// Add a new user
-router.post("/", async (req, res) => {
-  // #swagger.description = '新增使用者'
-  console.log("POST /api/v1/users");
+// Register a new user
+router.post("/register", async (req, res) => {
+  // #swagger.description = '註冊使用者'
+  console.log("POST /api/v1/users/register");
 
   // Validate the request body
   const { error } = registerValidation(req.body);
@@ -55,6 +57,43 @@ router.post("/", async (req, res) => {
   } catch (error) {
     console.log("Error creating user:", error);
     res.status(500).send("Error creating user");
+  }
+});
+
+// Login a user
+router.post("/login", async (req, res) => {
+  // #swagger.description = '登入使用者'
+  console.log("POST /api/v1/users/login");
+
+  // Validate the request body
+  const { error } = loginValidation(req.body);
+  if (error) {
+    return res.status(400).send(error.details[0].message);
+  }
+
+  // Check if the email already exists
+  const foundUser = await userModel.findOne({ email: req.body.email });
+  if (!foundUser) {
+    return res.status(400).send("Email not found, please register");
+  }
+
+  // Check if the password is correct
+  try {
+    const isPasswordCorrect = await foundUser.comparePassword(req.body.password);
+    if (!isPasswordCorrect) {
+      return res.status(400).send("Password is incorrect");
+    }
+
+    // Create a JWT token
+    const tokenObject = { _id: foundUser._id, email: foundUser.email, role: foundUser.role };
+    const token = jwt.sign(tokenObject, process.env.TOKEN_SECRET);
+    return res.send({
+      message: "Login successful",
+      token,
+    });
+  } catch (error) {
+    console.log("Error comparing password:", error);
+    res.status(500).send("Error comparing password");
   }
 });
 
